--- a/requirements.txt
+++ b/requirements.txt
@@ -77,3 +77,82 @@ tzdata==2023.3
 uritemplate==4.1.1
 urllib3==1.26.16
 yarl==1.9.2
+aiohttp==3.8.5
+aiosignal==1.3.1
+alabaster==0.7.13
+arrow==1.2.3
+asgiref==3.7.2
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.12.1
+boto3==1.28.37
+botocore==1.31.37
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==41.0.3
+defusedxml==0.7.1
+Django==4.2.4
+django-allauth==0.54.0
+django-cors-headers==4.2.0
+django-redis==5.4.0
+django-rest-auth==0.9.5
+django-rest-swagger==2.2.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+docutils==0.18.1
+drf-yasg==1.21.7
+frozenlist==1.4.0
+iamport-rest-client==0.9.0
+idna==3.4
+imagesize==1.4.1
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jmespath==1.0.1
+make==0.1.6.post2
+MarkupSafe==2.1.3
+multidict==6.0.4
+npm==0.1.1
+oauthlib==3.2.2
+openai==0.27.8
+openapi-codec==1.3.2
+optional-django==0.1.0
+packaging==23.1
+Pillow==10.0.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycparser==2.21
+Pygments==2.15.1
+PyJWT==2.8.0
+python-dateutil==2.8.2
+python-decouple==3.8
+python3-openid==3.2.0
+pytz==2023.3
+PyYAML==6.0.1
+redis==5.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+s3transfer==0.6.2
+simplejson==3.19.2
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==6.2.1
+sphinx-rtd-theme==1.2.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sqlparse==0.4.4
+tqdm==4.65.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
+yarl==1.9.2
